--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,6 @@ body {
 	margin: 0;
 }
 
-h1, h2, h3, h4, h5, p, span {
-	margin: 0;
-	color: #8B008B;
-}
-
 .container {
 	max-width: 1920px;
 	width: 100%;
@@ -87,11 +82,14 @@ nav {
 /* banner  */
  #main-banner {
  	background-color: red;
- 	background: url('../img/banner6.jpg') no-repeat;
- 	background-size: cover;
- 	background-position: 0 55%;
+ 	background: url('../img/banner6.png') no-repeat;
+ 	background-position: relative;
  	position: relative;
  	margin-top: 100px;
+	weight: 1000px;
+	height: 900px;
+	margin-left: auto;
+ 	margin-right: 0px;
  }
 
  #search-form {
@@ -139,4 +137,37 @@ nav {
  }
  .cabe2 {
 	 height: 80px;
+}
+h1, h2, h3, h4, h5, h6, p {
+    margin-block-start: 0.5rem;
+    margin-block-end: 1rem;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.2;
+    color: #ffffff;
+}
+.elementor-heading-title {
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+}
+h1 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+		color: #ffffff;
+}
+.elementor-heading-title {
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+}
+
+#vermeio{
+	background-color: #eb2b43;
+	height: 400px;
 }
