--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,35 @@ h1 {
 	background-color: #eb2b43;
 	height: 400px;
 }
+
+.elementor-button-text{
+	color: #ffffff;
+	background-color: #eb2b43;
+}
+
+.elementor-counter {
+    position: relative;
+    min-height: 1px;
+    display: flex;
+		color: #ffffff;
+}
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+		color: #eb2b43;
+	}
+	p {
+	    display: block;
+	    font-size: 1.5em;
+	    margin-block-start: 0.83em;
+	    margin-block-end: 0.83em;
+	    margin-inline-start: 0px;
+	    margin-inline-end: 0px;
+	    font-weight: bold;
+			color: #7A7A7A;
+		}
